# pro_sports_transactions

./: .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TLS_Fingerprinting_Analysis.md  clienthello.go  cloudscraper_issue_draft.md  example_tls_client.py  pyproject.toml  response_debug.html  tls-fingerprint.md  utls_issues_285.md
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh  post_create_command.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml
docs/: AI_RESEARCH_PROMPT.md  CLOUDFLARE_BYPASS_RESEARCH.md  CURL_CFFI_INTEGRATION.md  NEXT_STEPS_OPTIONS.md  curl_cffi_issue_draft.md
docs/cloudscraper/: CLOUDSCRAPER_WORK_SUMMARY.md  README.md  REFERENCE_DATA.md  TECHNICAL_ANALYSIS.md  cloudscraper-testing.md
docs/cloudscraper/archive/: CLOUDSCRAPER_PRESERVATION_STRATEGY.md  bypassing_cloudflare_in_2025.md  cloudflare.md  cloudscraper-config.md  cloudscraper.md  cloudscraper_analysis_report.md  preservation_summary.md  prosports_devtools.md  test-migration-plan.md
docs/curl_cffi/: ADVANCED_BOT_DETECTION_SYSTEMS_AND_ETHICAL_DATA_COLLECTION_METHODS.md  curl_cffi.md  curl_impersonate_lwthiker.md
examples/: cloudscraper_search.py  example_cloudflare.py  example_curl_cffi.py  ja4_bypass_strategies.md  test_cloudscraper.py  test_curl_cffi.py  test_curl_cffi_advanced.py  test_impersonate_effect.py  test_sync_vs_async.py  unflare_search.py  usage_examples.py
scripts/: README.md  compare_performance.py  performance_test.py  setup_performance_test.py
src/pro_sports_transactions/: __init__.py  curl_cffi_utils.py  search.py  simple_playwright.py
src/pro_sports_transactions/handlers/: CLOUDSCRAPER.md  __init__.py  base_handler.py  cloudscraper_handler.py  direct_handler.py  unflare_handler.py
src/prosportstransactions/: __init__.py
tests/integration/: test_search.py
tests/integration/handlers/: test_cloudscraper_handler_integration.py  test_direct_handler_integration.py  test_unflare_handler_integration.py
tests/performance/: config.py
tests/performance/handlers/: test_unflare_performance.py
tests/unit/: test_build_url.py  test_date_param.py  test_playwright_integration.py  test_search_responses.py  test_transaction_type_param.py
tests/unit/data/: empty_response.html  valid_response.html
tests/unit/handlers/: test_cloudscraper_handler.py  test_direct_handler.py  test_unflare_handler.py
