[tool.poetry]
name = "pro_sports_transactions"
version = "1.0.0"
description = "A Python Library for Consuming Transactions from Pro Sports Transactions (https://www.prosportstransactions.com)"
license = "MIT"
authors = ["Randy Forbes <randy.forbes@gmail.com>"]
readme = "README.md"
maintainers = ["Randy Forbes <randy.forbes@gmail.com>"]
repository = "https://github.com/rsforbes/pro_sports_transactions"
documentation = "https://github.com/rsforbes/pro_sports_transactions/blob/main/README.md"
keywords = ["api", "basketball", "baseball", "data", "data science", "draft", "fines", "football", "hockey", "injuries", "mlb", "mls", "nba", "nfl", "nhl", "prosports", "prosportstransactions", "pro sports", "pro sports transactions", "soccer","sports", "stats", "trades", "transactions"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
brotli = "^1.0.9"
lxml = "^4.9.2"
html5lib = "^1.1"
bs4 = "^0.0.1"
playwright = "^1.40.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
