[project]
name = "pro_sports_transactions"
version = "1.1.2"
description = "A Python Library for Consuming Transactions from Pro Sports Transactions (https://www.prosportstransactions.com)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Randy Forbes", email = "randy.forbes@gmail.com" }]
maintainers = [{ name = "Randy Forbes", email = "randy.forbes@gmail.com" }]
keywords = [
  "api",
  "basketball",
  "baseball",
  "data",
  "data science",
  "draft",
  "fines",
  "football",
  "hockey",
  "injuries",
  "mlb",
  "mls",
  "nba",
  "nfl",
  "nhl",
  "prosports",
  "prosportstransactions",
  "pro sports",
  "pro sports transactions",
  "soccer",
  "sports",
  "stats",
  "trades",
  "transactions",
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
]
dependencies = [
  "aiohttp>=3.13.3,<4",
  # pandas floor is 2.2.2, not 2.0.0: pandas <2.2.2 was compiled against the
  # numpy 1.x C-ABI, so resolving the declared floor against numpy >=2 fails at
  # import with "ValueError: numpy.dtype size changed". 2.2.2 is the first
  # release with numpy-2 support. The lowest-direct CI leg guards this floor.
  # Ceiling raised to <4 for pandas 3.x: read_html no longer accepts a literal
  # HTML string, so search.py wraps its input in StringIO (compatible with 2.2.x).
  "pandas>=2.2.2,<4",
  "brotli>=1.2.0,<2",
  "lxml>=4.9.2,<7.0.0",
  "html5lib>=1.1,<2",
  "bs4>=0.0.1,<0.0.2",
]

[project.urls]
Repository = "https://github.com/rsforbes/pro_sports_transactions"
Documentation = "https://github.com/rsforbes/pro_sports_transactions/blob/main/README.md"

[dependency-groups]
dev = [
  "pytest>=9.0,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-mock>=3.14,<4",
  "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pro_sports_transactions"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort — mirrors what the prior
# black + flake8 + isort stack actually enforced. B is flake8-bugbear (likely
# bug patterns); it was listed in the old .flake8 select but the plugin was
# never installed, so it never actually ran until now. E203 and E501 are owned
# by the formatter (line wrapping), so they're disabled here to avoid
# double-reporting.
select = ["E", "F", "W", "I", "B"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["pro_sports_transactions"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]

# Async tests use explicit @pytest.mark.asyncio markers; pin strict mode so the
# suite doesn't depend on it remaining pytest-asyncio's default.
asyncio_mode = "strict"

# Markers for different test types
addopts = "--strict-markers"
markers = [
  "unit: Unit tests (default)",
  "integration: Integration tests requiring external services",
  "performance: Performance benchmark tests",
  "slow: Tests that take significant time to run",
]

# Performance test thresholds
[tool.performance-thresholds]
# Configure performance test thresholds here
unflare_cache_hit_speedup = 10.0 # Cache hits should be 10x faster than misses
direct_request_timeout = 5.0     # Direct requests should timeout within 5s
unflare_first_request_max = 30.0 # First Unflare request max time in seconds
